<resources>
    <string name="app_name">Register</string>
    <string name="string_userlogin">用户登录</string>
    <string name="tv_username_text">用户名</string>
    <string name="string_loginByUsername">用户名登录</string>
    <string name="string_login_by_phone">验证码登录</string>
    <string name="et_username_hint">请输入用户名</string>
    <string name="tv_password_text">密&#160;&#160;&#160;&#160;码</string>
    <string name="et_password_hint">请输入密码</string>
    <string name="et_username_digits">qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM1234567890_</string>
    <string name="et_password_digits">qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM1234567890_+-@#</string>
    <string name="tv_phone_text">手机号</string>
    <string name="et_phone_hint">请输入手机号</string>
    <string name="et_code_hint">请输入验证码</string>
    <string name="btn_code_text">获取验证码</string>
    <string name="btn_login">登录</string>
</resources>